load("//bazel:api.bzl", "modular_py_binary", "modular_py_library", "modular_py_test", "modular_run_binary_test", "pkg_files", "requirement")

package(default_visibility = ["//max:consumers"])

modular_py_library(
    name = "tuning_codegen_lib",
    srcs = ["tuning_codegen.py"],
    imports = ["."],
    deps = [
        requirement("pyyaml"),
    ],
)

modular_py_binary(
    name = "tuning_codegen",
    srcs = ["tuning_codegen_main.py"],
    imports = ["."],
    main = "tuning_codegen_main.py",
    deps = [
        ":tuning_codegen_lib",
    ],
)

modular_py_test(
    name = "tuning_codegen_tests",
    size = "small",
    srcs = ["tests/test_tuning_codegen.py"],
    deps = [
        ":tuning_codegen_lib",
    ],
)

filegroup(
    name = "tuning_codegen_table_data",
    testonly = True,
    srcs = [
        "//max/kernels/src/linalg:matmul/gpu/sm100_structured/default/tuning_configs.mojo",
        "//max/kernels/src/linalg:matmul/gpu/sm100_structured/default/tuning_fp8.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm100_structured/default/tuning_fp8_ranged.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm100_structured/default/tuning_sm100.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm100_structured/default/tuning_table_sm100_bf16.yaml",
        "//max/kernels/src/linalg:matmul/gpu/sm100_structured/default/tuning_table_sm100_fp8.yaml",
        "//max/kernels/src/linalg:matmul/gpu/sm90/tuning.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm90/tuning_configs.mojo",
        "//max/kernels/src/linalg:matmul/gpu/sm90/tuning_custom.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm90/tuning_custom_grid.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm90/tuning_custom_scaled.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm90/tuning_custom_scaled_grid.mojo.snippet",
        "//max/kernels/src/linalg:matmul/gpu/sm90/tuning_table_bf16.yaml",
    ],
)

modular_run_binary_test(
    name = "sm100_fp8_tuning_codegen_test",
    args = [
        "--check",
        "--manifest=max/kernels/src/linalg/matmul/gpu/sm100_structured/default/tuning_table_sm100_fp8.yaml",
        "--snippet=max/kernels/src/linalg/matmul/gpu/sm100_structured/default/tuning_fp8.mojo.snippet",
        "--snippet-variant=ranged=max/kernels/src/linalg/matmul/gpu/sm100_structured/default/tuning_fp8_ranged.mojo.snippet",
        "--target=max/kernels/src/linalg/matmul/gpu/sm100_structured/default/tuning_configs.mojo",
        "--begin-marker=BEGIN-TUNING-LIST-SM100-FP8",
        "--end-marker=END-TUNING-LIST-SM100-FP8",
        "--source-label=tuning_table_sm100_fp8.yaml",
    ],
    binary = ":tuning_codegen",
    data = [":tuning_codegen_table_data"],
)

modular_run_binary_test(
    name = "sm100_bf16_tuning_codegen_test",
    args = [
        "--check",
        "--manifest=max/kernels/src/linalg/matmul/gpu/sm100_structured/default/tuning_table_sm100_bf16.yaml",
        "--snippet=max/kernels/src/linalg/matmul/gpu/sm100_structured/default/tuning_sm100.mojo.snippet",
        "--target=max/kernels/src/linalg/matmul/gpu/sm100_structured/default/tuning_configs.mojo",
        "--begin-marker=BEGIN-TUNING-LIST-SM100-BF16",
        "--end-marker=END-TUNING-LIST-SM100-BF16",
        "--source-label=tuning_table_sm100_bf16.yaml",
    ],
    binary = ":tuning_codegen",
    data = [":tuning_codegen_table_data"],
)

modular_run_binary_test(
    name = "sm90_bf16_tuning_codegen_test",
    args = [
        "--check",
        "--manifest=max/kernels/src/linalg/matmul/gpu/sm90/tuning_table_bf16.yaml",
        "--snippet=max/kernels/src/linalg/matmul/gpu/sm90/tuning.mojo.snippet",
        "--snippet-variant=custom=max/kernels/src/linalg/matmul/gpu/sm90/tuning_custom.mojo.snippet",
        "--snippet-variant=custom_grid=max/kernels/src/linalg/matmul/gpu/sm90/tuning_custom_grid.mojo.snippet",
        "--snippet-variant=custom_scaled=max/kernels/src/linalg/matmul/gpu/sm90/tuning_custom_scaled.mojo.snippet",
        "--snippet-variant=custom_scaled_grid=max/kernels/src/linalg/matmul/gpu/sm90/tuning_custom_scaled_grid.mojo.snippet",
        "--target=max/kernels/src/linalg/matmul/gpu/sm90/tuning_configs.mojo",
        "--begin-marker=BEGIN-TUNING-LIST-BF16",
        "--end-marker=END-TUNING-LIST-BF16-SMALL",
        "--source-label=max/kernels/src/linalg/matmul/gpu/sm90/tuning_table_bf16.yaml",
    ],
    binary = ":tuning_codegen",
    data = [":tuning_codegen_table_data"],
)

# Python-only library form of kbench so out-of-tree consumers can build
# their own modular_py_binary that pairs the same kbench harness with a
# different `mojo_deps` set — most notably, a stdlib overlay other than
# `@mojo//:std`. Carries no mojo_deps itself so the consumer fully
# controls which `std.mojopkg` lands in runfiles.
modular_py_library(
    name = "kbench_lib",
    srcs = [
        "__init__.py",
        "kbench.py",
        "kbench_model.py",
        "terminal_viz.py",
        "utils.py",
    ],
    imports = ["."],
    tags = ["no-pydeps"],  # mirrors the binary's tag
    visibility = ["//visibility:public"],
    deps = [
        ":bencher_utils",
        requirement("click"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("pygments"),
        requirement("pyyaml"),
        requirement("rich"),
        requirement("scipy"),
        requirement("plotly"),
        requirement("tabulate"),
        requirement("torch"),
        requirement("packaging"),
        "@rules_python//python/runfiles",
    ],
)

modular_py_binary(
    name = "kbench",
    srcs = ["kbench_main.py"],  # kbench.py + helpers come in via :kbench_lib
    data = [
        "@nvshmem_prebuilt//:device",
        "@nvshmem_prebuilt//:host",
    ] + select({
        # Bundle libubsan as a runfile so kbench can ctypes.CDLL it with
        # RTLD_GLOBAL before opening user .so's. See _maybe_preload_libubsan
        # in kbench_model.py and MOTO-1576.
        "//:ubsan_linux_aarch64": ["@clang-linux-aarch64//:lib/clang/22/lib/aarch64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so"],
        "//:ubsan_linux_x86_64": ["@clang-linux-x86_64//:lib/clang/22/lib/x86_64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so"],
        "//conditions:default": [],
    }),
    env = {
        "KERNEL_BENCHMARKS_ROOT": "$$BUILD_WORKSPACE_DIRECTORY/" + package_name() + "/..",
        "BITCODE_LIBS_PATH": "$(rootpath @nvshmem_prebuilt//:device)",
        "MODULAR_SHMEM_LIB_DIR": "../+http_archive+nvshmem_prebuilt",
    } | select({
        "//:ubsan_linux_aarch64": {
            "KBENCH_LIBUBSAN_PATH": "$(rootpath @clang-linux-aarch64//:lib/clang/22/lib/aarch64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so)",
        },
        "//:ubsan_linux_x86_64": {
            "KBENCH_LIBUBSAN_PATH": "$(rootpath @clang-linux-x86_64//:lib/clang/22/lib/x86_64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so)",
        },
        "//conditions:default": {},
    }),
    imports = ["."],
    main = "kbench_main.py",
    mojo_deps = [
        "//max:_cublas",
        "//max:_cudnn",
        "//max:_cufft",
        "//max:_rocblas",
        "//max:comm",
        "//max:extensibility",
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "//max:shmem",
        "@mojo//:std",
    ],
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        # :kbench_lib brings the other .py files (kbench_model, terminal_viz,
        # utils, __init__) plus the Python requirements transitively. The
        # requirements are also listed directly below so the mypy aspect on
        # this binary can resolve `import click` / `import rich` / … in
        # kbench.py; without that listing mypy fails import-not-found.
        ":kbench_lib",
        requirement("click"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("pygments"),
        requirement("pyyaml"),
        requirement("rich"),
        requirement("scipy"),
        requirement("plotly"),
        requirement("tabulate"),
        requirement("torch"),
        requirement("packaging"),
        "@rules_python//python/runfiles",
    ] + select({
        "//:nvidia_gpu": ["//max/kernels/benchmarks/misc/comparison:bench_baseline_lib"],
        "//:amd_gpu": [
            "//max/kernels/benchmarks/misc/comparison:bench_amd_mha",
            "//max/kernels/benchmarks/misc/comparison:bench_amd_mla",
            "//max/kernels/benchmarks/misc/comparison:bench_amd_mxfp4_gemm",
            "//max/kernels/benchmarks/misc/comparison:bench_softmax_lib",
        ],
        "//conditions:default": [],
    }),
)

modular_py_binary(
    name = "kprofile",
    srcs = [
        "kprofile.py",
    ],
    imports = ["."],
    main = "kprofile.py",
    mojo_deps = [
        "//max:extensibility",
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "@mojo//:std",
    ],
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        ":kbench",
        requirement("rich"),
    ],
)

modular_py_binary(
    name = "kplot",
    srcs = [
        "kplot.py",
    ],
    imports = ["."],
    main = "kplot.py",
    mojo_deps = [
        "//max:extensibility",
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "@mojo//:std",
    ],
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        ":kbench",
        ":kprofile",
        requirement("plotly"),
        requirement("kaleido"),
    ],
)

modular_py_binary(
    name = "kdiff",
    srcs = [
        "kdiff.py",
    ],
    imports = ["."],
    main = "kdiff.py",
    deps = [
        requirement("click"),
        requirement("pyyaml"),
    ],
)

modular_py_library(
    name = "bencher_utils",
    srcs = [
        "bencher_utils.py",
    ],
    imports = ["."],
)

modular_py_test(
    name = "autotune_tests",
    # test_kbench compiles multiple Mojo binaries which can be slow on CI.
    size = "large",
    srcs = glob(
        ["tests/*.py"],
        exclude = ["tests/test_tuning_codegen.py"],
    ),
    data = glob(["tests/*.csv"]) + [
        "sample.mojo",
        "sample.py",
        "test.yaml",
        "test_python.yaml",
        "tests/minimal_fixture.mojo",
        "tests/sample_failure.mojo",
        "tests/test_crash.yaml",
        "tests/test_minimal.yaml",
        "tests/test_timeout.yaml",
    ] + select({
        # See _maybe_preload_libubsan in kbench_model.py and MOTO-1576.
        "//:ubsan_linux_aarch64": ["@clang-linux-aarch64//:lib/clang/22/lib/aarch64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so"],
        "//:ubsan_linux_x86_64": ["@clang-linux-x86_64//:lib/clang/22/lib/x86_64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so"],
        "//conditions:default": [],
    }),
    env = {"KERNEL_BENCHMARKS_ROOT": "max/kernels/benchmarks/"} | select({
        "//:ubsan_linux_aarch64": {
            "KBENCH_LIBUBSAN_PATH": "$(rootpath @clang-linux-aarch64//:lib/clang/22/lib/aarch64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so)",
        },
        "//:ubsan_linux_x86_64": {
            "KBENCH_LIBUBSAN_PATH": "$(rootpath @clang-linux-x86_64//:lib/clang/22/lib/x86_64-unknown-linux-gnu/libclang_rt.ubsan_standalone.so)",
        },
        "//conditions:default": {},
    }),
    mojo_deps = [
        "//max:extensibility",
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "@mojo//:std",
    ],
    per_test_shard_count = {
        "tests/test_kbench.py": 4,
    },
    tags = [
        "enable-sanitizers",
    ],
    target_compatible_with = select({
        # FIXME
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        # :kbench_lib provides the .py modules the tests import directly
        # (kbench, kbench_model, terminal_viz, utils). The :kbench binary
        # only carries kbench_main.py since the kbench_lib split, so
        # depending on it instead leaves those imports unresolved.
        ":kbench_lib",
        ":kplot",
        ":kprofile",
        "//max/kernels/benchmarks/autotune:bencher_utils",
        requirement("click"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("pytest-mock"),
        requirement("rich"),
    ],
)

# TODO: this probably can be removed safely.
pkg_files(
    name = "autotune_files",
    srcs = [
        "kbench.py",
        "kplot.py",
        "kprofile.py",
        "pyproject.toml",
        "utils.py",
    ],
    prefix = "kernel-benchmark/autotune",
)
