load("//bazel:api.bzl", "modular_py_binary", "requirement")

package(default_visibility = ["//max:consumers"])

# Graph-level row-wise reduction benchmark (manual perf tool, NOT run in CI).
# Times MAX's own Mojo Row-API reduction kernels through the public max.graph
# API on a large bandwidth-bound grid. The matching CI correctness test lives
# at //max/tests/integration/graph:test_rowwise_reductions. Depends only on the
# clean graph-execution stack (driver/dtype/engine/graph) + numpy; internal ops
# (row_mean_of_squares, reduce_min_and_max) are built via ops.custom so the dep
# set stays minimal.
modular_py_binary(
    name = "bench_rowwise_reductions",
    srcs = ["bench_rowwise_reductions.py"],
    imports = ["."],
    main = "bench_rowwise_reductions.py",
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)
