load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

# Raw sources for the LSP parse-smoke test.
filegroup(
    name = "srcs",
    srcs = glob(["**/*.mojo"]),
    visibility = ["//KGEN/test/mojo-lsp-server/parse-tree:__pkg__"],
)

mojo_library(
    name = "kv_cache",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "kernels",
    use_production_compiler_for_asan = True,
    validate_missing_docs = False,
    deps = [
        "//max:extensibility",
        "//max:layout",
        "@mojo//:std",
    ],
)
