load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

# Raw sources for the LSP parse-smoke test.
filegroup(
    name = "srcs",
    srcs = glob(["**/*.mojo"]),
    visibility = ["//KGEN/test/mojo-lsp-server/parse-tree:__pkg__"],
)

mojo_library(
    name = "layout",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "",
    docs_hosted_on_mojolang = True,
    docs_title = "Layout library",
    use_production_compiler_for_asan = True,
    deps = [
        "@mojo//:std",
    ],
)
