load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

# Raw sources for the LSP parse-smoke test.
filegroup(
    name = "srcs",
    srcs = glob(["**/*.mojo"]),
    visibility = ["//KGEN/test/mojo-lsp-server/parse-tree:__pkg__"],
)

mojo_library(
    name = "shmem",
    srcs = glob(["**/*.mojo"]),
    additional_compiler_inputs = select({
        "//:linux_x86_64": [
            "@nvshmem_prebuilt//:device",
            "@rocshmem//:device",
        ],
        "//conditions:default": [],
    }),
    copts = select({
        "//:linux_x86_64": [
            "--bitcode-libs",
            "$(location @nvshmem_prebuilt//:device)",
            "--bitcode-libs",
            "$(location @rocshmem//:device)",
        ],
        "//conditions:default": [],
    }),
    data = select({
        "//:linux_x86_64": [
            "@nvshmem_prebuilt//:host",
            "@rocshmem//:host",
        ],
        "//conditions:default": [],
    }),
    use_production_compiler_for_asan = True,
    validate_missing_docs = False,
    deps = [
        "//max:layout",
        "//max:linalg",
        "@mojo//:std",
    ],
)
