load("//bazel:api.bzl", "mojo_filecheck_test", "mojo_test")

package(default_visibility = ["//max:consumers"])

_FILECHECK_TESTS = [
    "test_naive_matmul.mojo",
    "test_partial_load_store.mojo",
    "test_strsv.mojo",
]

[
    mojo_filecheck_test(
        name = src + ".test",
        srcs = [src],
        copts = [
            "--debug-level",
            "full",
        ],
        deps = [
            "//max:extensibility",
            "//max:internal_utils",
            "//max:linalg",
            "@mojo//:std",
            "@mojo//:test_utils",
        ],
    )
    for src in _FILECHECK_TESTS
]

# Tile-based elementwise fusion needs the builtin_kernels package (for the
# `Add` op) which the shared glob deps below don't carry. Give it an explicit
# target so the other buffer tests don't pull that heavy dep.
_EXPLICIT_DEP_TESTS = [
    "test_tile_codegen_elementwise_fusion.mojo",
    "test_foreach_fusion_tile_gpu.mojo",
]

mojo_test(
    name = "test_tile_codegen_elementwise_fusion.mojo.test",
    srcs = ["test_tile_codegen_elementwise_fusion.mojo"],
    copts = [
        "--debug-level",
        "full",
    ],
    deps = [
        "//max:builtin_kernels",
        "//max:extensibility",
        "//max:layout",
        "@mojo//:std",
        "@mojo//:test_utils",
    ],
)

# GPU integration test for the `foreach_fusion_tile` driver: needs
# builtin_primitives (the driver), builtin_kernels (the `Add` op the fusion
# struct uses), and a GPU.
mojo_test(
    name = "test_foreach_fusion_tile_gpu.mojo.test",
    srcs = ["test_foreach_fusion_tile_gpu.mojo"],
    copts = [
        "--debug-level",
        "full",
    ],
    tags = ["gpu"],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:builtin_kernels",
        "//max:builtin_primitives",
        "//max:extensibility",
        "//max:layout",
        "@mojo//:std",
        "@mojo//:test_utils",
    ],
)

[
    mojo_test(
        name = src + ".test",
        srcs = [src],
        copts = [
            "--debug-level",
            "full",
        ],
        deps = [
            "//max:extensibility",
            "//max:internal_utils",
            "//max:linalg",
            "@mojo//:std",
            "@mojo//:test_utils",
        ],
    )
    for src in glob(
        ["*.mojo"],
        exclude = _FILECHECK_TESTS + _EXPLICIT_DEP_TESTS,
    )
]
