load("//bazel:api.bzl", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "kvcache_tests",
    timeout = "long",
    srcs = glob(
        ["*.py"],
        exclude = [
            "*_gpu.py",
            "test_print_kv_cache.py",
            "test_rotary_embedding.py",
        ],
    ),
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/experimental/torch",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        "//max/python/max/nn",
        "//max/python/max/pipelines/context",
        "//max/python/max/pipelines/kv_cache",
        "//max/python/max/pipelines/modeling",
        "//max/python/max/support",
        "//max/tests/integration/test_common:context_utils",
        "//max/tests/integration/test_common:modular_graph_test",
        requirement("hypothesis"),
        requirement("numpy"),
        requirement("pytest-asyncio"),
        requirement("torch"),
    ],
)

modular_py_test(
    name = "test_print_kv_cache",
    srcs = [
        "conftest.py",
        "test_print_kv_cache.py",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        # Test takes too long on ASAN to run in presubmit
        "//:asan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        requirement("hypothesis"),
    ],
)

modular_py_test(
    name = "embedding",
    srcs = glob(
        ["*_rotary_embedding.py"],
    ) + ["conftest.py"],
    shard_count = 11,
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//:asan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        "//max/python/max/pipelines/kv_cache",
        "//max/tests/integration/test_common:context_utils",
        "//max/tests/integration/test_common:modular_graph_test",
        requirement("hypothesis"),
        requirement("numpy"),
        requirement("torch"),
    ],
)

modular_py_test(
    name = "kvcache_gpu_tests",
    srcs = glob(
        ["*_gpu.py"],
        exclude = [
            "*_distributed_gpu.py",
            "test_lora_*.py",
            "test_fused_qk_rms_norm_rope_fusion_gpu.py",  # disabled: QUA-780 / MXSERV-283
            "test_msa_fp8_kv_store_gpu.py",
            "test_dual_qk_fp8_kv_store_gpu.py",
        ],
    ) + ["conftest.py"],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    gpu_constraints = ["//:has_gpu"] + select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME: MOCO-2411
    tags = [
        "gpu",
    ],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        "//max/python/max/pipelines/kv_cache",
        "//max/tests/integration/test_common:context_utils",
        requirement("hypothesis"),
        requirement("numpy"),
    ],
)

# Dedicated target for the FP8 KV store round-trip test
modular_py_test(
    name = "test_msa_fp8_kv_store_gpu",
    srcs = [
        "test_msa_fp8_kv_store_gpu.py",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    tags = [
        "gpu",
    ],
    target_compatible_with = ["//:b200_gpu"],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        "//max/python/max/pipelines/kv_cache",
        "//max/tests/integration/test_common:context_utils",
        "//max/tests/integration/test_common:graph_utils",
        requirement("numpy"),
        requirement("torch"),
    ],
)

# Dedicated target for the dual (main + indexer) QK RMSNorm+RoPE FP8 KV
# round-trip test
modular_py_test(
    name = "test_dual_qk_fp8_kv_store_gpu",
    srcs = [
        "test_dual_qk_fp8_kv_store_gpu.py",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    tags = [
        "gpu",
    ],
    target_compatible_with = ["//:b200_gpu"],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        "//max/python/max/pipelines/context",
        "//max/python/max/pipelines/kv_cache",
        "//max/tests/integration/test_common:context_utils",
        "//max/tests/integration/test_common:graph_utils",
        requirement("numpy"),
        requirement("torch"),
    ],
)

# Disabled due to nondeterminism. Tracking: QUA-780
# Re-enable tracking: https://linear.app/modularml/issue/MXSERV-283
modular_py_test(
    name = "test_fused_qk_rms_norm_rope_fusion_gpu",
    srcs = [
        "conftest.py",
        "test_fused_qk_rms_norm_rope_fusion_gpu.py",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    tags = ["gpu"],
    target_compatible_with = ["@platforms//:incompatible"],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        "//max/python/max/pipelines/kv_cache",
        "//max/tests/integration/test_common:context_utils",
        requirement("hypothesis"),
        requirement("ml-dtypes"),
        requirement("numpy"),
    ],
)

modular_py_test(
    name = "kvcache_distributed_gpu_tests",
    srcs = glob(["*_distributed_gpu.py"]) + ["conftest.py"],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    gpu_constraints = ["//:has_4_gpus"],
    tags = [
        "gpu",
    ],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/nn",
        "//max/python/max/pipelines/context",
        "//max/python/max/pipelines/kv_cache",
        "//max/tests/integration/test_common:context_utils",
        requirement("hypothesis"),
        requirement("numpy"),
        requirement("pytest-asyncio"),
    ],
)

_LORA_TEST_DEPS = [
    "//max/python/max/driver",
    "//max/python/max/dtype",
    "//max/python/max/engine",
    "//max/python/max/experimental/torch",
    "//max/python/max/graph",
    "//max/python/max/pipelines/kv_cache",
    "//max/python/max/nn",
    "//max/python/max/pipelines/context",
    "//max/tests/integration/test_common:context_utils",
    requirement("hypothesis"),
    requirement("numpy"),
    requirement("torch"),
]

modular_py_test(
    name = "lora_kv_cache_2m_iadd_tests",
    size = "large",
    srcs = [
        "conftest.py",
        "test_lora_kv_cache_2m_iadd_gpu.py",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    tags = [
        "gpu",
    ],
    target_compatible_with = ["//:b200_gpu"],
    deps = _LORA_TEST_DEPS,
)

modular_py_test(
    name = "lora_sgmv_qkv_tests",
    size = "large",
    srcs = [
        "conftest.py",
        "test_lora_sgmv_qkv_gpu.py",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    tags = [
        "gpu",
    ],
    target_compatible_with = ["//:b200_gpu"],
    deps = _LORA_TEST_DEPS,
)
